    * Bump up to CedarCommon v4.8.0, to get updated date format in JavaLoggingFormatter.
    * Fix build.gradle so AppEngine dependencies are properly divorced from versions in CedarCommon.
    * Bump up to AppEngine v1.9.11, since v1.9.6 is getting kind of old.
    * Be more strict about using Mockito's isA() in unit tests rather than any().

Version 0.9.37   08 Jul 2014

    * Upgrade to the official GWT v2.6.1 release.
    * Upgrade to the latest AppEngine v1.9.6 from June.
    * Upgrade to CedarCommon v4.5.0 to pull in a fix for the DataTablePager.
    * Disable XML validation when retrieving an exchange from the database, to work around JAXB bugs.

Version 0.9.36   08 May 2014

    * Upgrade to GWT v2.6.1-rc2, which has some improvements over official v2.6.0.
    * Upgrade to CedarComon v4.3.2, which has functional improvements and a new mvp4g jar.
    * Fix bug with the way validation errors are handled on some screens.

Version 0.9.35   06 Jan 2014

    * Take the plunge and upgrade to GWT v2.6.0 RC3.
    * Upgrade to CedarBuild v0.8.9, to allow configuring memory for tests.
    * Upgrade to AppEngine v1.8.8, which required a move to Java 7 and some gradle tweaks.
    * Upgrade to CedarCommon v3.5.0, which has interface changes and functional improvements.

Version 0.9.34   28 Oct 2013

    * Fix build.xml's run.all.tests tasks to actually run all tests, not just unit tests.
    * Remove the stupid welcome pop-up, which I'm tired of because it complicates tests.
    * Enhance extensions.rb to allow local.properties to override build.properties and cuucmber.properties.
    * Rework Capybara configuration to allow configuring the AJAX wait timeout in properties.
    * Bump up to CedarBuild v0.8.8 to fix problems with JRuby and JVM 1.6.
    * Make the table-related Cucumber tests more resiliant if there are delays in rendering data.
    * Remove and reorganize the notes for acceptance tests, pointing people at the wiki instead.

Version 0.9.33   27 Oct 2013
